tests/ui/invalid_pyfunction_warn.stderr
error: unexpected end of input, expected parentheses
 --> tests/ui/invalid_pyfunction_warn.rs:4:12
  |
4 | #[pyo3(warn)]
  |            ^

error: missing `message` in `warn` attribute
 --> tests/ui/invalid_pyfunction_warn.rs:9:13
  |
9 | #[pyo3(warn())]
  |             ^

error: missing `message` in `warn` attribute
  --> tests/ui/invalid_pyfunction_warn.rs:14:62
   |
14 | #[pyo3(warn(category = pyo3::exceptions::PyDeprecationWarning))]
   |                                                              ^

error: expected string literal
  --> tests/ui/invalid_pyfunction_warn.rs:19:74
   |
19 | #[pyo3(warn(category = pyo3::exceptions::PyDeprecationWarning, message = ,))]
   |                                                                          ^

error: expected identifier
  --> tests/ui/invalid_pyfunction_warn.rs:24:57
   |
24 | #[pyo3(warn(message = "deprecated function", category = ,))]
   |                                                         ^

error: expected `message` or `category`
  --> tests/ui/invalid_pyfunction_warn.rs:29:46
   |
29 | #[pyo3(warn(message = "deprecated function", random_key))]
   |                                              ^^^^^^^^^^

error: #[classattr] cannot be used with #[pyo3(warn)]
  --> tests/ui/invalid_pyfunction_warn.rs:39:12
   |
39 |     #[pyo3(warn(message = "deprecated class attr"))]
   |            ^^^^

error: __traverse__ cannot be used with #[pyo3(warn)]
  --> tests/ui/invalid_pyfunction_warn.rs:48:12
   |
48 |     #[pyo3(warn(message = "deprecated __traverse__"))]
   |            ^^^^

error: aborting due to 8 previous errors

